alignment fixed a bit

--- a/style.css
+++ b/style.css
@@ -187,10 +187,12 @@ input[type=number]::-webkit-outer-spin-button {
     }
 
 .icon {
-    font-weight: bold;
+    display: inline-flex;
+    align-items: center;
     margin-right: 6px;
-    font-size: 1.2em;
+    justify-content: center;
     width: 1.2em;
+    font-size: 1.2em;
 }
 
     .icon.total {
